src/gateway/manifest/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    # TODO
    placeholde: "none"
spec:
  rules:
    - host: mp3converter.apps.sandbox-m2.ll9k.p1.openshiftapps.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway
                port: 
                  number: 8080
